# gesture-recognition

./: .gitignore  CMakeLists.txt  Global.h  Layer.cpp  Layer.h  main.cpp
Inc/: Global.h
Layers/: Conv.cpp  Conv.h  ConvL.cpp  ConvL.h  Dense.cpp  Dense.h  Layer.cpp  Layer.h
Layers/ConvL/: ConvBackPropagation.cpp  ConvForwardPropagation.cpp  ConvL.cpp  ConvL.h  ConvMisc.cpp  ConvNormalization.cpp
Layers/DenseL/: DenseBackPropagation.cpp  DenseForwardPropagation.cpp  DenseL.h  DenseMisc.cpp  DenseNormalization.cpp
Src/: main.cpp
Training/: ForwardPropagation.cpp  ForwardPropagation.h
